--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,36 @@
 {% extends 'base.html' %}
 
 {% block content %}
+		<aside>
+			<div id='details'>
+				<h3>Event Details</h3>
+				<p><strong>Date:</strong> Wednesday February 17th<br>
+				<strong>Time:</strong> 12:00 - 4:00 PM EST<br>
+				<strong>Cost:</strong> Free</p>
+			</div>
+			<div id='speakers'>
+				<div class='speaker'>
+					<img src='img/RachelReuben.png'/>
+					<p><strong>Rachel Reuben</strong><br>
+					SUNY New Paltz</p>
+				</div>
+				<div class='speaker'>
+					<img src='img/FritzMcdonald.png'/>
+					<p><strong>Fritz McDonald</strong><br>
+					Statmats, Inc.</p>
+				</div>
+				<div class='speaker'>
+					<img src='img/SuzanneShareef.png'/>
+					<p><strong>Suzanne Shareef</strong><br>
+					Hofstra University</p>
+				</div>
+				<div class='speaker'>
+					<img src='img/BradWard.png'/>
+					<p><strong>Brad Ward</strong><br>
+					BlueFuego, Inc.</p>
+				</div>
+			</div>
+		</aside>
 
 		<section id="left_section">
 			<div id='registration'>
@@ -8,64 +38,34 @@
 				<form method="post" action="/register">
 					<p>First Name Last Name</p>
 					<p><input type='text' /> <input type='text' /></p>
-					<p> College / Business</p>
-					<p><input type='text' /></p>
-					<p> Job Title </p>
-					<p><input type='text' /></p>
-					<p> Work Email</p>
-					<p><input type='text' /></p>
+					<p> College / Business<br>
+					<input type='text' /></p>
+					<p> Job Title <br>
+					<input type='text' /></p>
+					<p> Work Email<br>
+					<input type='text' /></p>
 					<input type='submit' value='Register'/>
 				</form>
 			</div>
 			<section id='schedule'>
 				<h3> Live Video Presentations </h3>
 				<article>
-				<strong>12:00 PM EST - Keynote Panel</strong>
-				<p class='presentation-name'> Engaging Prospective Students Online</p>
-				<ul>
-					<li> <strong> Major Paul Island </strong>, U.S. Military Academy, West Point</li>
-					<li> <strong> Chris D' Orso </strong>, Stony Brook University</li>
-					<li><strong> Suzanne Shareef</strong> Hofstra University </li>
-					<li> <strong> David A Pierre </strong> St. John's University </li>
+					<strong>12:00 PM EST - Keynote Panel</strong>
+					<h4> Engaging Prospective Students Online</h4>
+					<ul>
+						<li> <strong> Major Paul Island </strong>, U.S. Military Academy, West Point</li>
+						<li> <strong> Chris D' Orso </strong>, Stony Brook University</li>
+						<li><strong> Suzanne Shareef</strong> Hofstra University </li>
+						<li> <strong> David A Pierre </strong> St. John's University </li>
+					</ul>
 				</article>
 				<article>
-				<strong> 1:00 PM EST </strong>
-				<p class='presentation-name'> The Millennial Mindset's Effect on Web 2.0 Plans</p>
-				<p><strong> Kerry Salerno, Directory of Admissions Marketing and EMSA</strong><p>
-				<p><strong> Makeda Keegan, Sr. Assistant Director of eCommunications</strong></p>
-				<p><em> Northeastern University </em></p>
+					<strong> 1:00 PM EST </strong>
+					<h4> The Millennial Mindset's Effect on Web 2.0 Plans</h4>
+					<p><strong> Kerry Salerno, Directory of Admissions Marketing and EMSA Makeda Keegan, Sr. Assistant Director of eCommunications</strong><br>
+					<em> Northeastern University </em></p>
 				</article>
 			</section>
 		</section>
-		<aside>
-			<div id='details'>
-				<p>Event Details</p>
-				<p>Date: Wednesday February 17th</p>
-				<p>Time: 12:00 - 4:00 PM EST</p>
-				<p>Cost: Free</p>
-			</div>
-			<div id='speakers'>
-				<div class='speaker'>
-					<img src='img/RachelReuben.png'/>
-					<p>Rachel Reuben</p>
-					<p>SUNY New Paltz</p>
-				</div>
-				<div class='speaker'>
-					<img src='img/FritzMcdonald.png'/>
-					<p>Fritz McDonald</p>
-					<p>Statmats, Inc.</p>
-				</div>
-				<div class='speaker'>
-					<img src='img/SuzanneShareef.png'/>
-					<p>Suzanne Shareef</p>
-					<p>Hofstra University</p>
-				</div>
-				<div class='speaker'>
-					<img src='img/BradWard.png'/>
-					<p>Brad Ward</p>
-					<p>BlueFuego, Inc.</p>
-				</div>
-			</div>
-		</aside>
 
 {% endblock %}
