--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
 				<strong>Cost:</strong> Free</p>
 			</div>
 			<div id='speakers'>
+				<h2> Featured Speakers </h2>
 				<div class='speaker'>
 					<img src='img/RachelReuben.png'/>
 					<p><strong>Rachel Reuben</strong><br>
