--- a/views/base.html
+++ b/views/base.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 	<section>
-	<img src='img/banner.png' />
+	<div id='banner'>
+		<img src='img/banner.png' />
+	</div>
 	{% block content %}
 	{% endblock %}
 	</section>
