User registration logic

--- a/views/index.html
+++ b/views/index.html
@@ -38,13 +38,13 @@
 			<h2> Register To Attend! </h2>
 				<form method="post" action="/register">
 					<p>First Name Last Name</p>
-					<p><input type='text' /> <input type='text' /></p>
+					<p><input name='first_name' type='text' /> <input name='last_name' type='text' /></p>
 					<p> College / Business<br>
-					<input type='text' /></p>
+					<input name='workplace' type='text' /></p>
 					<p> Job Title <br>
-					<input type='text' /></p>
+					<input name='title' type='text' /></p>
 					<p> Work Email<br>
-					<input type='text' /></p>
+					<input name='email' type='text' /></p>
 					<input type='submit' value='Register'/>
 				</form>
 			</div>
